<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gunmetal_gray"
    tools:context=".presentation.settings.SettingsFragment">

    <RadioGroup
        android:id="@+id/completedColorRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/completedText"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/blueRadioButton"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/blue"
            android:paddingHorizontal="4dp"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/yellowRadioButton"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yellow"
            android:paddingHorizontal="4dp"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/greenRadioButton"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/green"
            android:paddingHorizontal="4dp"
            android:textSize="16sp" />
    </RadioGroup>

    <TextView
        android:id="@+id/completedText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="48dp"
        android:text="@string/completed_color"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/uncompletedText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:text="@string/uncompleted_color"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/completedText" />

    <RadioGroup
        android:id="@+id/notCompletedColorRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/uncompletedText"
        app:layout_constraintTop_toBottomOf="@+id/completedColorRadioGroup">

        <RadioButton
            android:id="@+id/brownRadioButton"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:paddingHorizontal="4dp"
            android:text="@string/brown" />

        <RadioButton
            android:id="@+id/pinkRadioButton"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="4dp"
            android:textSize="16sp"
            android:text="@string/pink" />

        <RadioButton
            android:id="@+id/violetRadioButton"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="4dp"
            android:text="@string/violet" />
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>
